[package]
name = "iso8583_parser"
version = "0.2.2"
edition = "2021"
description = "An ISO8583 Message Parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HosseinAssaran/ISO8583-Parser"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
eframe = "0.29.1"
emv_tlv_parser = "0.1.8"
hex = "0.4.3"

[http]
http.check-revoke = "false"

[profile.release]
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "iso8583_parser_gui"
path = "src/gui_main.rs"
